# voyage

./: .gitignore  README.md  package-lock.json  package.json  prisma.config.ts
Itinerary_Agent/: .dockerignore  Budget_Agent.py  Core_Agent.py  Dockerfile  Premium_Agent.py  api.py  base_agent.py  debug_parse.py  llm_config.py  orchestrator.py  requirements.txt  schemas.py  simple_agent.py  test_api.py  test_request.json  tools.py
Itinerary_Agent/agent_outputs/: budget_raw.txt  core_raw.txt  premium_raw.txt
TBO_API/Flight_API/: result_save.py  test.py
TBO_API/Hotel_API/: result_save.py  test.py
Utils/: extract_urls.py  merged_subtitles.txt
Utils/video_subs/: Add Logo in minutes with TBO Holidays.txt  Agent Backend Walkthrough!.txt  Booking Queue Management Walkthrough for All Products!.txt  Car Rental Booking Walkthrough- Step-by- Step Guide.txt  Create and Manage Users on TBO Holidays.txt  Cruise Overview.txt  Flights Booking Walkthrough.txt  H-Next Hotel Booking Walkthrough- Step-by-Step Guide.txt  H-next- The Next Generation Booking Engine!.txt  Hotel Booking Walkthrough- Step-by-Step Guide.txt  Itineraries Walkthrough.txt  Multiple Payment Options with TBO Holidays!.txt  (+12 more)
app/: globals.css  layout.tsx  page.tsx
backend/: .gitignore  README.md  agent.py  analyser.py  api.py  app.py  db.py  features.py  pyproject.toml  requirements.txt  server.py  update_persona.py
components/: JourneyBackground.tsx
lib/: friend-db.ts  prisma.ts  types.ts  utils.ts
prisma/: schema.prisma
scripts/: create-travel-agents.mjs  inspect-schema.mjs
store/: chat-store.ts
(+31 files in other folders)
